# Season-Folder-Make

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  SeasonFolderMake.pro  aboutdialog.cpp  aboutdialog.h  core.cpp  core.h  fenprincipale.cpp  fenprincipale.h  foldercreatethread.cpp  foldercreatethread.h  main.cpp  rsc.qrc  verifyupdatethread.cpp  verifyupdatethread.h
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: windows-build.yml
translations/: de.ts  fr.ts  sfm_es.ts  sfm_fr.ts
